[tool.poetry]
name = "paas-devops"
version = "0.1.0"
description = "PAAS APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "~3.8"
whitenoise = "^5.2.0"
sentry-sdk = "^0.19.5"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"
apis-core = "~0.17"
acdh-django-charts = "~0.5.3"
django-haystack = "~3.1.1"
pysolr = "~3.9.0"
django-csp = "~3.7"
mysqlclient = "^2.0.3"
django-sass-processor = "^1.1"
django-libsass = "^0.9"

[tool.poetry.dev-dependencies]
pandas = "0.25.3"
django-extensions = "~3"
pylint = "^2.6.0"
jupyter = "~1"
jupyter-tabnine = "^1.2.3"
openpyxl = "^3.0.9"
dephell = {extras = ["full"], version = "^0.8.3"}
mistune = "<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
