[tool.poetry]
name = "paas-devops"
version = "0.1.0"
description = "PAAS APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11.2, <3.12"
whitenoise = "^6.3.0"
sentry-sdk = "*"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
acdh-django-charts = "^0.5.3"
django-allow-cidr = "^0.6.0"
mysqlclient = "^2.1.1"
django-extensions = "^3.2.1"
django-csp = "^3.7"
#viecpro-vis = "^0.1.10"
pyzotero = "^1.5.5"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core.git", branch = "hotfix/fix-python3.11_errors" }
pysolr = "^3.9.0"
django-haystack = "^3.2.1"
django-sass-processor = "^1.2.2"
libsass = "^0.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.1.0"
pylint = "^2.6.0"
jupyter = "^1.0.0"
jupyter-tabnine = "^1.2.3"
black = "^22.12.0"
flake8 = "^6.0.0"
debugpy = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
